--- a/prototype/main/xfce-config/Materia-Light/asset/overlay/etc/skel/.config/gtk-3.0/settings.ini
+++ b/prototype/main/xfce-config/Materia-Light/asset/overlay/etc/skel/.config/gtk-3.0/settings.ini
@@ -1,10 +1,10 @@
-
-## ~/.gtkrc-2.0
-
-gtk-theme-name="Materia-dark"
-gtk-icon-theme-name="Papirus-Dark"
-gtk-font-name="Sans 12"
-gtk-cursor-theme-name="breeze_cursors"
+[Settings]
+gtk-application-prefer-dark-theme=0
+gtk-recent-files-enabled=0
+gtk-theme-name=Materia-light
+gtk-icon-theme-name=Papirus-Light
+gtk-font-name=Sans 12
+gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -14,6 +14,4 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle="hintfull"
-
-# include "/home/user/.gtkrc-2.0.mine"
+gtk-xft-hintstyle=hintfull
